--- a/app/src/main/res/layout/activity_rutas_inf.xml
+++ b/app/src/main/res/layout/activity_rutas_inf.xml
@@ -35,11 +35,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="25sp"
+                    android:textStyle="bold"
                     android:textColor="@color/Negro"
                     android:textAlignment="center"
                     android:id="@+id/TNombre" />
             <TextView
                     android:text="TextView"
+                    android:layout_marginTop="5dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="20sp"
@@ -52,6 +54,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="20sp"
+                    android:layout_marginTop="5dp"
                     android:textColor="@color/Negro"
                     android:textAlignment="center"
                     android:id="@+id/TDistancia" />
@@ -60,18 +63,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="15sp"
+                    android:layout_marginTop="5dp"
                     android:textColor="@color/Negro"
                     android:textAlignment="center"
                     android:id="@+id/TTiempo"/>
-            <TextView
-                    android:text="TextView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="20sp"
-                    android:layout_marginTop="20dp"
-                    android:textColor="@color/Negro"
-                    android:textAlignment="center"
-                    android:id="@+id/TDescripcion"/>
         </LinearLayout>
 
     </LinearLayout>
