--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
+             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#D3D5DF"
@@ -9,23 +9,48 @@
     <!-- The primary full-screen view. This can be replaced with whatever view
          is needed to present your content, e.g. VideoView, SurfaceView,
          TextureView, etc. -->
-    <LinearLayout android:layout_width="match_parent"
-                  android:layout_height="match_parent"
-                  android:orientation="vertical">
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center_vertical"
+            android:background="@color/colorPrimary">
 
         <TextView android:id="@+id/fullscreen_content"
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:keepScreenOn="true"
-                  android:textColor="#33b5e5"
-                  android:textStyle="bold"
-                  android:textSize="50sp"
-                  android:gravity="center"
-                  android:text="@string/dummy_content"/>
-        <Button
-                android:text="Button"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"/>
+
+        <TextView
+                android:text="Bienvenido"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/Login_continuar"/>
+                android:textSize="45sp"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                android:background="#bc477b"
+                android:textColor="#000000"
+                android:layout_marginHorizontal="30dp"
+                android:layout_marginTop="20dp"
+                android:backgroundTintMode="screen"
+                android:layout_height="wrap_content" android:id="@+id/textView2"/>
+        <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" app:srcCompat="@drawable/logos" android:id="@+id/imageView3"/>
+        <CheckBox
+                android:text="Terminos y condiciones"
+                android:layout_width="match_parent"
+                android:shadowColor="@color/colorAccent"
+                android:textColor="#fff"
+                android:layout_marginStart="40sp"
+                android:layout_height="wrap_content" android:id="@+id/Terminos"
+                style="@android:style/Widget.Material.CompoundButton.CheckBox"/>
+        <Button
+                android:text="Aceptar y continuar"
+                android:layout_width="wrap_content"
+                android:textSize="15sp"
+                android:layout_gravity="end"
+                android:layout_height="wrap_content" android:id="@+id/Login_continuar"
+                tools:layout_editor_absoluteY="500dp" tools:layout_editor_absoluteX="0dp"
+                style="@style/Widget.AppCompat.Button.Colored"/>
 
     </LinearLayout>
 
