--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -16,10 +16,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textSize="25sp"
+            android:textSize="35sp"
             android:layout_marginTop="40dp"
             android:text="Selecciona tu destino"
+            android:textStyle="bold"
+            android:textColor="@color/colorAccent"
             android:ems="10"
+            android:layout_marginHorizontal="50dp"
             android:background="@color/TranspateDark"
             android:id="@+id/TVBuscar"/>
 
