--- a/app/src/main/res/layout/confirmacion.xml
+++ b/app/src/main/res/layout/confirmacion.xml
@@ -16,13 +16,14 @@
                 android:layout_height="match_parent"
                 app:srcCompat="@drawable/mapedit"
                 android:id="@+id/imageButton2"
-                android:layout_marginStart="45dp"
                 android:background="@color/Transpate"/>
         <Button
                 android:text="Lugar de salida"
                 android:layout_width="match_parent"
                 android:textSize="25sp"
                 android:textColor="@color/iconosNavigation"
+                android:background="@color/colorAccent"
+                android:layout_marginEnd="20dp"
                 android:layout_height="wrap_content" android:id="@+id/Borigen"
                 style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
     </LinearLayout>
@@ -31,7 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/trespuntos"
-            android:layout_marginStart="46dp"
+            android:layout_marginStart="1dp"
             android:id="@+id/imageView2"/>
 
     <LinearLayout
@@ -43,7 +44,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 app:srcCompat="@drawable/mapedit"
-                android:layout_marginStart="45dp"
                 android:id="@+id/imageButton"
                 android:background="@color/Transpate"/>
         <Button
@@ -52,6 +52,8 @@
                 android:layout_width="match_parent"
                 android:textSize="25sp"
                 android:textColor="@color/iconosNavigation"
+                android:background="@color/colorAccent"
+                android:layout_marginEnd="25dp"
                 android:layout_height="wrap_content" android:id="@+id/BDestino"
                 style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
     </LinearLayout>
