--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,65 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             android:background="#D3D5DF"
-             tools:context=".Login">
+             tools:context=".Login"
+            android:background="@color/colorPrimary"
+              android:orientation="horizontal">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
          is needed to present your content, e.g. VideoView, SurfaceView,
          TextureView, etc. -->
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="center_vertical"
-            android:background="@color/colorPrimary">
 
-        <ImageView
-                android:layout_width="0dp"
-                android:layout_height="0dp" app:srcCompat="@drawable/amu_bubble_shadow"
-                android:id="@+id/Contend"/>
-        <TextView android:id="@+id/fullscreen_content"
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"/>
-
-        <TextView
-                android:text="Bienvenido"
+        <LinearLayout
                 android:layout_width="match_parent"
-                android:textSize="45sp"
-                android:textAlignment="center"
-                android:textStyle="bold"
-                android:background="#bc477b"
-                android:textColor="#000000"
-                android:layout_marginHorizontal="30dp"
-                android:layout_marginTop="20dp"
-                android:backgroundTintMode="screen"
-                android:layout_height="wrap_content" android:id="@+id/textView2"/>
-        <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" app:srcCompat="@drawable/logos" android:id="@+id/imageView3"/>
-        <CheckBox
-                android:text="Terminos y condiciones"
-                android:layout_width="match_parent"
-                android:shadowColor="@color/colorAccent"
-                android:textColor="#fff"
-                android:layout_marginStart="40sp"
-                android:textSize="25sp"
-                android:layout_height="wrap_content" android:id="@+id/Terminos"
-                style="@android:style/Widget.Material.CompoundButton.CheckBox"/>
-        <Button
-                android:text="Aceptar y continuar"
-                android:layout_width="wrap_content"
-                android:textSize="15sp"
-                android:layout_gravity="end"
-                android:layout_marginEnd="20dp"
-                android:layout_height="wrap_content" android:id="@+id/Login_continuar"
-                tools:layout_editor_absoluteY="500dp" tools:layout_editor_absoluteX="0dp"
-                style="@style/Widget.AppCompat.Button.Colored"/>
+                android:layout_height="match_parent"
+                android:orientation="vertical"
 
-    </LinearLayout>
+                android:layout_gravity="center"
+                android:background="@color/colorPrimary">
+
+            <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="0dp" app:srcCompat="@drawable/amu_bubble_shadow"
+                    android:id="@+id/Contend"/>
+            <TextView android:id="@+id/fullscreen_content"
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"/>
+
+            <TextView
+                    android:text="Bienvenido"
+                    android:layout_width="match_parent"
+                    android:textSize="45sp"
+                    android:textAlignment="center"
+                    android:textStyle="bold"
+                    android:background="#bc477b"
+                    android:textColor="#000000"
+                    android:layout_marginHorizontal="30dp"
+                    android:layout_marginTop="20dp"
+                    android:backgroundTintMode="screen"
+                    android:layout_height="wrap_content" android:id="@+id/textView2"/>
+            <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" app:srcCompat="@drawable/logos"
+                    android:id="@+id/imageView3"/>
+            <CheckBox
+                    android:text="Terminos y condiciones"
+                    android:layout_width="match_parent"
+                    android:shadowColor="@color/colorAccent"
+                    android:textColor="#fff"
+                    android:layout_marginStart="40sp"
+                    android:textSize="25sp"
+                    android:layout_height="wrap_content" android:id="@+id/Terminos"
+                    style="@android:style/Widget.Material.CompoundButton.CheckBox"/>
+            <Button
+                    android:text="Aceptar y continuar"
+                    android:layout_width="wrap_content"
+                    android:textSize="15sp"
+                    android:layout_gravity="end"
+                    android:layout_marginEnd="20dp"
+                    android:layout_height="wrap_content" android:id="@+id/Login_continuar"
+                    tools:layout_editor_absoluteY="500dp" tools:layout_editor_absoluteX="0dp"
+                    style="@style/Widget.AppCompat.Button.Colored"/>
+
+        </LinearLayout>
 
 
-
-</FrameLayout>
+</ScrollView>
